refactor: 정적 리소스 및 로그인 페이지 로드 로직 개선
- File 및 URL 기반 파일 읽기 방식을 InputStream으로 변경하여 리소스 로드 로직 단순화
- 에러 페이지 생성 로직 분리(createErrorPage 메서드 추가) 및 상태 코드 반영
- readLoginPage 및 readStaticFile 메서드에서 UTF-8 인코딩 적용
- 로그 메시지 추가: 리소스 파일 미존재 및 읽기 실패 시 경고 및 에러 로그 출력